--- a/index.html
+++ b/index.html
@@ -15,23 +15,24 @@
     <h1 id="logo"> dev.finance$ </h1>
   </header>
 
-  <main>
+  <main class="container">
     <section id="balance">
       <h2> Balanço </h2>
 
-      <div id="card">
+      <div class="card">
         <h3> Entradas </h3>
         <p> R$ 5.000,00 </p>
       </div>
-  
-      <div id="card">
-        <h3> Total </h3>
-        <p> R$ 3.000,00 </p>
-      </div>
 
-      <div id="card">
+      <div class="card">
         <h3> Saídas </h3>
         <p> R$ 2.000,00 </p>
+      </div>
+
+        
+      <div class="card total">
+        <h3> Total </h3>
+        <p> R$ 3.000,00 </p>
       </div>
 
     </section>
@@ -49,19 +50,19 @@
         </thead>
         <tbody>
           <tr>
-            <td> Luz </td>
-            <td> - R$ 500,00 </td>
-            <td> 23/01/2021 </td>
+            <td class="description"> Luz </td>
+            <td class="expense"> - R$ 500,00 </td>
+            <td class="date"> 23/01/2021 </td>
           </tr>
           <tr>
-            <td> Criação de Website </td>
-            <td> R$ 5.000,00 </td>
-            <td> 23/01/2021 </td>
+            <td class="description"> Criação de Website </td>
+            <td class="income"> R$ 5.000,00 </td>
+            <td class="date"> 23/01/2021 </td>
           </tr>
           <tr>
-            <td> Internet </td>
-            <td> - R$ 200,00 </td>
-            <td> 23/01/2021 </td>
+            <td class="description"> Internet </td>
+            <td class="expense"> - R$ 200,00 </td>
+            <td class="date"> 23/01/2021 </td>
           </tr>
         </tbody>
       </table>
