--- a/index.html
+++ b/index.html
@@ -163,7 +163,35 @@
           Nova Transação
         </h2>
         <form action="">
-          
+          <div class="input-group">
+            <label
+              class="sr-only"
+              for="description"
+            >
+              Descrição
+            </label>
+            <input 
+              type="text"
+              name="description"
+              id="description"
+              placeholder="Descrição"
+            />
+          </div>
+
+          <div class="input-group">
+            <label
+              class="sr-only"
+              for="description"
+            >
+              Valor
+            </label>
+            <input
+              type="number"
+              name="amount"
+              id="amount"
+              placeholder="0,00"
+            />
+          </div>
         </form>
       </div>
     </div>
