Finish HTML and CSS

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
   <div class="modal-overlay active">
     <div class="modal">
-      <div class="form">
+      <div id="form">
         <h2>
           Nova Transação
         </h2>
@@ -181,17 +181,45 @@
           <div class="input-group">
             <label
               class="sr-only"
-              for="description"
+              for="amount"
             >
               Valor
             </label>
             <input
               type="number"
+              step="0.01"
               name="amount"
               id="amount"
               placeholder="0,00"
             />
+            <small class="help">Use o sinal - (negativo) para despesas e , (vírgula) para casas decimais </small>
           </div>
+
+          <div class="input-group">
+            <label
+              class="sr-only"
+              for="date"
+            >
+              Data
+            </label>
+            <input 
+              type="date"
+              name="date"
+              id="date"
+              placeholder="Data"
+            />
+          </div>
+
+          <div class="input-group actions">
+            <a 
+              href="#"
+              class="button cancel"
+            >
+              Cancelar
+            </a>
+            <button>Salvar</button>
+          </div>
+
         </form>
       </div>
     </div>
