--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     initial-scale=1.0"
   >
   <title> dev.finance$ </title>
-
   <link 
     rel="stylesheet" 
     href="./style.css"
@@ -157,7 +156,7 @@
     </section>
   </main>
 
-  <div class="modal-overlay active">
+  <div class="modal-overlay">
     <div class="modal">
       <div id="form">
         <h2>
