--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         document
           .querySelector('.modal-overlay')
           .classList
-          .add('active')
+          .remove('active')
       }
     }
   </script>
