Adding JavaScript file to the project

--- a/index.html
+++ b/index.html
@@ -232,25 +232,6 @@
     </p>
   </footer>
 
-  <script>
-    const Modal = {
-      open() {
-        // Abrir Model 
-        // Adicionar a class active ao modal
-        document
-          .querySelector('.modal-overlay')
-          .classList
-          .add('active')
-      },
-      close() {
-        // Fechar o modal
-        // Remover a class active do modal
-        document
-          .querySelector('.modal-overlay')
-          .classList
-          .remove('active')
-      }
-    }
-  </script>
+  <script src="./scripts.js"></script>
 </body>
 </html>
