--- a/index.html
+++ b/index.html
@@ -162,7 +162,10 @@
         <h2>
           Nova Transação
         </h2>
-        <form action="">
+        <form
+          action=""
+          onsubmit="Form.submit(event)"
+        >
           <div class="input-group">
             <label
               class="sr-only"
