--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     content="width=device-width,
     initial-scale=1.0"
   >
-  <title> dev.finance$ </title>
+  <title> dev.finance </title>
   <link 
     rel="stylesheet" 
     href="./style.css"
